[tool.poetry]
name = "duelpre"
version = "0.1.0"
description = ""
authors = ["ryouhama <hary0730cap@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
mysqlclient = "^2.0.3"
pytz = "^2021.1"
flake8 = "^3.9.2"
injector = "^0.18.4"
django-environ = "^0.6.0"
pytest = "^6.2.5"
django-extensions = "^3.1.3"
ptpython = "^3.0.19"
coreapi = "^2.3.3"
Pygments = "^2.10.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
